# learning_server

./: CMakeLists.txt
src/: CMakeLists.txt  custom_message_types.h  main.cpp  message.h
src/basic/: client_interface.h  connection.h  message.h  owned_message.h  server.h  therd_safe_queue.h  thread_safe_queue.h
src/client/: CMakeLists.txt  client.cpp  custom_client.h  custom_message_types.h
src/server/: CMakeLists.txt  custom_server.h  server.cpp
src/tcp_communication/: CMakeLists.txt  client_interface.h  connection.h  owned_message.h  server.h  tcp_message.h  thread_safe_queue.h
tests/: CMakeLists.txt  tests.cpp
